examples/test/testpolicy12244.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy12244
  namespace: namespace210
spec:
  podSelector:
    matchLabels:
      key32: value28
      key20: value38
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key35: value8
          key22: value7
      podSelector:
        matchLabels:
          key13: value33
